add_library(Engine
        src/bloomframebuffer.cpp
        src/camera.cpp
        src/cameramanager.cpp
        src/cube.cpp
        src/cubemapcube.cpp
        src/engine.cpp
        src/entity.cpp
        src/framebuffer.cpp
        src/fullscreenquad.cpp
        src/hdrtexture.cpp
        src/ibl/brdfconvolutionframebuffer.cpp
        src/ibl/cubemapframebuffer.cpp
        src/ibl/diffuseirradiancemap.cpp
        src/ibl/equirectangularcubemap.cpp
        src/ibl/hdricube.cpp
        src/ibl/mipmapcubemapframebuffer.cpp
        src/ibl/specularmap.cpp
        src/inputmanager.cpp
        src/mesh.cpp
        src/model.cpp
        src/rendermanager.cpp
        src/rotatingcamera.cpp
        src/shader.cpp
        src/skybox.cpp
        src/timer.cpp
        src/windowmanager.cpp
        )

target_include_directories(Engine
        PUBLIC
            "${CMAKE_CURRENT_LIST_DIR}/include"
        )

target_link_libraries(Engine
        PUBLIC
        GLFW
        Glad
        Stb
        Assimp
        Imgui
        )